--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -7,15 +7,18 @@
 <body>
     <h1>Blog Posts</h1>
     <h3>This is very simple blog-post web site. I use django frame-work for building this site. </h3>
+    <br>
+    <p>Latest posts</p>
     <div>
         {% for post in posts %}
             <div>
-                <h2>{{ post.title }}</h2>
+                <a href="{% url 'post_detail' post.id %}"><h2>{{ post.title }}</h2></a>
                 <p><h3>{{ post.subtitle }}</h3></p>
-                <p>Author: {{ post.author }}<br>Date: {{ post.date_posted }}</p>
+                <p>Author: {{ post.author }}<br>Date: {{ post.date_posted|date:"M d, Y" }}</p>
             </div>
+            <br>
         {% endfor %}
     </div>
-    <a href="#">↗︎All Posts</a>
+    <a href="{% url 'post_list' %}">↗See All</a>
 </body>
 </html>
