--- a/blog/templates/logout.html
+++ b/blog/templates/logout.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <p>You have been logged out. <a href="{% url 'login' %}">Login again?</a></p>
+    <br>
+    <a href="{% url 'home' %}">↗Back Home</a>
 </body>
 </html>
