--- a/blog/templates/post_create.html
+++ b/blog/templates/post_create.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login</title>
+    <title>Create Post</title>
 </head>
 <body>
+    <h1>Create New Post</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Login</button>
+        <button type="submit">Post</button>
     </form>
-    <br>
-    <a href="{% url 'home' %}">↗Back Home</a>
 </body>
 </html>
