--- a/blog/templates/post_list.html
+++ b/blog/templates/post_list.html
@@ -5,17 +5,21 @@
     <title>Blog</title>
 </head>
 <body>
+    {% if user.is_authenticated %}
+        <a href="{% url 'profile' %}">↗See Profile</a>
+    {% else %}
+        <a href="{% url 'login' %}">↗Login</a>
+        <a href="{% url 'register' %}">↗Register</a>
+    {% endif %}
     <h1>All Posts</h1>
     <h3>All posts are in here. Choose and click you are interested! </h3>
     <br>
     <div>
         {% for post in posts %}
             <div>
-                <div>
-                    <a href="{% url 'post_detail' post.id %}"><h2>{{ post.title }}</h2></a>
-                    <p><h3>{{ post.subtitle }}</h3></p>
-                    <p>Author: {{ post.author }}<br>Date: {{ post.date_posted|date:"M d, Y" }}</p>
-                </div>
+                <a href="{% url 'post_detail' post.id %}"><h2>{{ post.title }}</h2></a>
+                <p><h3>{{ post.subtitle }}</h3></p>
+                <p>Author: {{ post.author }}<br>Date: {{ post.date_posted|date:"M d, Y" }}</p>
             </div>
             <br>
         {% endfor %}
