--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -10,5 +10,8 @@
         {{ form.as_p }}
         <button type="submit">Register</button>
     </form>
+    <br>
+    <a href="{% url 'home' %}">↗Back Home</a>
 </body>
 </html>
+    
